      304 and no content when a conditional GET is sent.  This is a potential 
      significant win for sites. This behavior is activated on the
      CachingPolicyManager by using policies that set suitable ETag headers
      when delivering the content. Geoff Davis invested the time to add
      this feature.

  Others

    - Collectors #384:  Added '__traceback_info__' to FSDTMLMethod's
      call-stack etnry.

    - Collector #383:  Added tab to 'portal_uidhandler' tool to allow
      querying objects given UID.

    - CMFCatalogAware: refactoring. Defines now 2 methods,
      _getCatalogTool() and _getWorkflowTool(), that are used to find
      the catalog and workflow tool. It's now possible to override
      these methods using inheritence for a given content type to
      specify another catalog or workflow tool the content type can
      use

    - CMFSetup: allow export of properties of old objects that were
      stored as lists (instead of tuples now).

CMF 1.5.4 (2005/09/04)

  Bug Fixes

    - CatalogTool: Made sure the catalog_object method works with Zope 2.8.
      The new 'pghandler' argument was missing. This broke at least the
      refreshCatalog method used by 'Update Catalog'.
      (http://www.zope.org/Collectors/CMF/379)

CMF 1.5.4-beta (2005/08/28)

  Bug Fixes

    - CMFCore.utils: The return value from _mergedLocalRoles allowed
      direct manipulation of objects' local role settings since it
      contained references to the actual values instead of copies.
      (http://www.zope.org/Collectors/CMF/376)

    - CMFTopic.DateCriteria: The behavior and naming of date criteria
      operators was very confusing and in many cases unexpected and 
      wrong. For that reason e.g. Plone replaced the implementation
      with a more user-friendly handling which is hereby introduced
      to CMF proper. (http://www.zope.org/Collectors/CMF/339)

    - CMFCore.PortalContent, CMFCore.FSSTXMethod, CMFTopic.Topic,