@@ -41,6 +41,8 @@ After CMF 1.5.4
 
   Others
 
+    - CMFDefault.Portal:  deprecated 'manage_addCMFSite'.
+
     - Collectors #384:  Added '__traceback_info__' to FSDTMLMethod's
       call-stack etnry.
 
